# nl-open-data

./: .gitignore  .travis.yml  AUTHORS.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  Makefile  README.md  README.rst  SUMMARY.md  cookiecutter-setup.py  environment.yaml  environment.yml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: issue_template.md
docs/: Makefile  conf.py  index.html  make.bat  nl_open_data.flows.rst  nl_open_data.flows.vektis.rst  nl_open_data.rst  usage.rst
docs/_build/doctrees/: authors.doctree  contributing.doctree  environment.pickle  history.doctree  index.doctree  installation.doctree  modules.doctree  nl_open_data.doctree  nl_open_data.flows.cbs.doctree  nl_open_data.flows.doctree  nl_open_data.flows.kadaster.doctree  nl_open_data.flows.vektis.doctree  readme.doctree  usage.doctree
docs/_build/html/: .buildinfo  authors.html  contributing.html  genindex.html  history.html  index.html  installation.html  modules.html  nl_open_data.flows.cbs.html  nl_open_data.flows.html  nl_open_data.flows.kadaster.html  nl_open_data.flows.vektis.html  nl_open_data.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js  usage.html
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: index.rst.txt  installation.rst.txt  modules.rst.txt  nl_open_data.flows.cbs.rst.txt  nl_open_data.flows.kadaster.rst.txt  nl_open_data.rst.txt
docs/nl_open_data/: ZZ_nl_open_data.html  cli.html  cli.md  config.html  index.html  index.md  main.html  nl_open_data.html  nl_open_data.md
docs/nl_open_data/flows/: index.html
docs/nl_open_data/flows/cbs/: catalog.html  index.html  regionaal.html
docs/nl_open_data/flows/kadaster/: bag.html  (+1 more)
nl_open_data/: __init__.py  cli.py  config.py  config.toml  main.py  tasks.py  user_config.toml  utils.py
nl_open_data/datamarts/: query_generator.py
nl_open_data/datamarts/dso/: bevolking_p4_leeftijd_geslacht.sql  dim_wijken.sql  gebruik_wmo_pgb_gemeente.sql  inkomen_huishouden_gemeente.sql  kerncijfers_wijken_en_buurten.sql
nl_open_data/flows/: test_flow_error.py
nl_open_data/flows/cbs/: catalog.py  iv3.py  mlz.py  regionaal.py  register_statline_bq_flow.py  register_temp_secrets.py  register_zip_csv_flow.py  rivm.py  run_mlz.py  run_regionaal.py  run_rivm.py  run_temp_secrets.py  run_test_statline_bq_flow.py  test_statline_bq_flow.py  test_zip_csv_flow.py
nl_open_data/flows/dso/: dso.py
nl_open_data/flows/kadaster/: bag.py  bag_schemas.py  test_prefect_bag.py  test_script.py
nl_open_data/flows/vektis/: agb.py  open_data.py
nl_open_data/sql/: bevolking_pc4_leeftijd_geslacht.sql
notebooks/: test-bigquery-load-file.ipynb  test-cbs-81819.ndjson  test-cbs-to-parquet.ipynb  test-cbs-to-parquet.ndsjon  test-local-secrets-prefect.ipynb  test.ndjson
tests/: __init__.py  test_nl_open_data.py
(+7 files in other folders)
