[tool.poetry]
name = "nl-open-data"
version = "0.1.0"
description = "Datawarehouse of various Dutch open data sources with focus on healthcare and public domain."
authors = ["Daniel Kapitan <daniel@kapitan.net>"]

[tool.poetry.dependencies]
python = "^3.8"
bokeh = "^2.1.1"
click = "^7.1.2"
dask = "^2.21.0"
google-auth = "^1.19.2"
google-cloud-core = "^1.3.0"
google-cloud-bigquery = "^1.26.1"
google-cloud-storage = "^1.30.0"
nimbletl = {git = "https://github.com/dkapitan/nimbletl.git"}
prefect = "^0.12.5"
cbsodata = "^1.3.1"
pandas-gbq = "^0.13.2"
requests = "^2.24.0"
pyarrow = "^1.0.0"
bunch = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
black = "^19.10b0"
ipykernel = "^5.3.4"
ipython = "^7.16.1"
pdoc3 = "^0.8.4"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[tool.dephell.requirements]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "pip", path = "requirements.txt"}

[tool.dephell.conda]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "conda", path = "environment.yaml"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

